[package]
name = "rust-lists"
version = "0.1.0"
authors = ["jlricon <artirj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
criterion = "0.3"
[[bench]]
name = "array_vs_linkedlist"
harness = false
[profile.release]
debug = true
